--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,22 @@
-.vscode/
+# Compiled files
 bin/
 *.class
+
+# Misc
 .env
+*.log
+
+# IDE
+*.ctxt
+.vscode/
+.idea/
+*.iml
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
